--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,10 @@
 
 </head>
 <body>
-    <header>
-        
+    <header class="container-fluid">
+        <div class="logo">
+            <img src="./src/img/spotify-logo.svg" alt="logo">
+        </div>
     </header>
     <main id="app">
 
