--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,19 @@
             <img src="./src/img/spotify-logo.svg" alt="logo">
         </div>
     </header>
-    <main id="app">
-
+    <main id="app" class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">title</h5>
+                      <p class="card-text">artist:</p>
+                      <p class="card-text">date of release:</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
     </main>
     <!-- added vue 3 -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
