--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,6 @@
     <!-- added Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- addded axios -->
-
     <!-- added style -->
     <link rel="stylesheet" href="./style/style.css">
 
@@ -25,7 +23,7 @@
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src=" " class="card-img-top" alt=" ">
                     <div class="card-body">
                       <h5 class="card-title">title</h5>
                       <p class="card-text">artist:</p>
