--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
             <img src="./src/img/spotify-logo.svg" alt="logo">
         </div>
     </header>
-    <main id="app" class="container-fluid">
+    <main id="app" class="container">
         <section id="disk" class="mb-4">
             <div class="row justify-content-center">
                 <div class="col-4 mt-4" v-for = "(dischiListItem,index) in dischiList" :key="index">
